Drift and diffusion now take arguments val and time, so changed things accordingly

--- a/sdebridge/notebooks/Q_bridge.ipynb
+++ b/sdebridge/notebooks/Q_bridge.ipynb
@@ -135,9 +135,15 @@
     "# ax.scatter(squares.reshape(-1, 2)[:, 0], squares.reshape(-1, 2)[:, 1], color='r')\n",
     "# print(circles.shape, squares.shape)\n",
     "\n",
+    "def drift(val, time):\n",
+    "    return jnp.zeros(d)\n",
+    "\n",
+    "def diffusion(val, time): \n",
+    "    return Q \n",
+    "\n",
     "model = DiffusionBridge(\n",
-    "    drift = lambda x, t: jnp.zeros(d),\n",
-    "    diffusion = lambda x, t: Q,\n",
+    "    drift = drift,\n",
+    "    diffusion = diffusion,\n",
     "    dim=d,\n",
     "    end_time=1.0,\n",
     "    num_steps=50,\n",
