Use least square solution to calculate the inversion to enhance the numerical stability.

--- a/sdebridge/notebooks/score_bridge_test.ipynb
+++ b/sdebridge/notebooks/score_bridge_test.ipynb
@@ -35,22 +35,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def flatten_batch(x: jax.Array):\n",
+    "def flatten_batch(x: jnp.ndarray):\n",
     "    assert len(x.shape) >= 2\n",
     "    return x.reshape(-1, x.shape[-1])\n",
     "\n",
-    "def unsqueeze(x: jax.Array, axis: int):\n",
+    "def unsqueeze(x: jnp.ndarray, axis: int):\n",
     "    return jnp.expand_dims(x, axis=axis)\n",
     "\n",
-    "def squeeze(x: jax.Array, axis: int):\n",
+    "def squeeze(x: jnp.ndarray, axis: int):\n",
     "    return jnp.squeeze(x, axis=axis)\n",
     "\n",
-    "def batch_multi(a: jax.Array, b: jax.Array) -> jax.Array:\n",
+    "def batch_multi(a: jnp.ndarray, b: jnp.ndarray) -> jnp.ndarray:\n",
     "    \"\"\" Perform matrix-vector multiplication for a single matrix/vector and each matrix/vector in a batch.\n",
     "    \"\"\"\n",
     "    return jax.vmap(lambda x, y: jnp.dot(x, y), in_axes=(None, 0), out_axes=0)(a, b)\n",
     "\n",
-    "def bb_multi(a: jax.Array, b: jax.Array) -> jax.Array:\n",
+    "def bb_multi(a: jnp.ndarray, b: jnp.ndarray) -> jnp.ndarray:\n",
     "    \"\"\" Perform matrix_vector multiplication for each pair of matrix/vector and matrix/vector in two batches.\n",
     "    \"\"\"\n",
     "    return jax.vmap(lambda x, y: jnp.dot(x, y), in_axes=(0, 0), out_axes=0)(a, b)\n",
@@ -59,7 +59,7 @@
     "    ts = jnp.linspace(0.0, end_time, num_steps + 1)\n",
     "    return ts\n",
     "\n",
-    "def get_network_output(module: nn.Module, params: dict, x: jax.Array, t: float) -> jax.Array:\n",
+    "def get_network_output(module: nn.Module, params: dict, x: jnp.ndarray, t: float) -> jnp.ndarray:\n",
     "    assert len(x.shape) == 2                                        # (B, d)\n",
     "    t = jnp.tile(t, reps=(x.shape[0], 1))                           # (B, 1)\n",
     "    return module.apply({'params': params}, x, t)                   # (B, d)\n",
@@ -71,7 +71,7 @@
     "class TrainState(train_state.TrainState):\n",
     "    metrics: Metrics\n",
     "\n",
-    "def create_train_state(module: nn.Module, rng: jax.Array, learning_rate: float, input_shape1: tuple, input_shape2: tuple) -> TrainState:\n",
+    "def create_train_state(module: nn.Module, rng: jnp.ndarray, learning_rate: float, input_shape1: tuple, input_shape2: tuple) -> TrainState:\n",
     "    params = module.init(rng, jnp.zeros(shape=input_shape1), jnp.zeros(shape=input_shape2))['params']\n",
     "    tx = optax.adam(learning_rate)\n",
     "    return TrainState.create(\n",
@@ -105,15 +105,15 @@
     "        self.true_score_h = true_score_h\n",
     "\n",
     "    def simulate_forward_process(self, \n",
-    "                                 initial_condition: jax.Array) -> jax.Array:\n",
+    "                                 initial_condition: jnp.ndarray) -> jnp.ndarray:\n",
     "        \"\"\" Simulate the forward non-bridge process (X(t)):\n",
     "            dX(t) = f(X(t), t) dt + g(X(t), t) dW(t)\n",
     "\n",
     "        Args:\n",
-    "            initial_condition (jax.Array): X(0) \n",
+    "            initial_condition (jnp.ndarray): X(0) \n",
     "\n",
     "        Returns:\n",
-    "            jax.Array: (B, N+1, d) forward non-bridge trajectories\n",
+    "            jnp.ndarray: (B, N+1, d) forward non-bridge trajectories\n",
     "        \"\"\"        \n",
     "        assert initial_condition.shape[-1] == self.d\n",
     "        B = initial_condition.shape[0]      # batch size\n",
@@ -134,21 +134,21 @@
     "    def simulate_backward_bridge(self, \n",
     "                                 score_transition_net: nn.Module, \n",
     "                                 score_transition_params: dict, \n",
-    "                                 initial_condition: jax.Array, \n",
-    "                                 terminal_condition: jax.Array, \n",
-    "                                 using_true_score: bool) -> jax.Array:\n",
+    "                                 initial_condition: jnp.ndarray, \n",
+    "                                 terminal_condition: jnp.ndarray, \n",
+    "                                 using_true_score: bool) -> jnp.ndarray:\n",
     "        \"\"\" Simulate the backward bridge process (Z*(t)):\n",
     "            dZ*(t) = {-f(T-t, Z*(t)) + Sigma(T-t, Z*(t)) s(T-t, Z*(t)) + div Sigma(T-t, Z*(t))} dt + g(T-t, Z*(t)) dW(t)\n",
     "\n",
     "        Args:\n",
     "            score_transition_net (nn.Module): s_{theta}(t, x)\n",
     "            score_transition_net_params (dict): s_{theta}(t, x) parameters\n",
-    "            initial_condition (jax.Array): Z*(0) = X(T-t)\n",
-    "            terminal_condition (jax.Array): Z*(T) = X(0)\n",
+    "            initial_condition (jnp.ndarray): Z*(0) = X(T-t)\n",
+    "            terminal_condition (jnp.ndarray): Z*(T) = X(0)\n",
     "            using_true_score (bool): If True, use the predefined score transition function.\n",
     "\n",
     "        Returns:\n",
-    "            jax.Array: (B, N+1, d) backward bridge trajectories\n",
+    "            jnp.ndarray: (B, N+1, d) backward bridge trajectories\n",
     "        \"\"\"        \n",
     "        assert initial_condition.shape[-1] == terminal_condition.shape[-1] == self.d\n",
     "        if using_true_score:\n",
@@ -182,9 +182,9 @@
     "                                score_transition_params: dict, \n",
     "                                score_marginal_net: nn.Module, \n",
     "                                score_marginal_params: dict, \n",
-    "                                initial_condition: jax.Array, \n",
-    "                                terminal_condition: jax.Array, \n",
-    "                                using_true_score: bool) -> jax.Array:\n",
+    "                                initial_condition: jnp.ndarray, \n",
+    "                                terminal_condition: jnp.ndarray, \n",
+    "                                using_true_score: bool) -> jnp.ndarray:\n",
     "        \"\"\" Simulate the forward bridge process (X*(t)):\n",
     "            dX*(t) = {-f(t, X*(t)) + Sigma(t, X*(t)) [s*(t, X*(t)) - s(t, X*(t))]} dt + g(t, X*(t)) dW(t)\n",
     "\n",
@@ -193,12 +193,12 @@
     "            score_transition_params (dict): s_{theta}(t, x) parameters\n",
     "            score_marginal_net (nn.Module): s*_{theta}(t, x)\n",
     "            score_marginal_params (dict): s*_{theta}(t, x) parameters\n",
-    "            initial_condition (jax.Array): X*(0)\n",
-    "            terminal_condition (jax.Array): X*(T)\n",
+    "            initial_condition (jnp.ndarray): X*(0)\n",
+    "            terminal_condition (jnp.ndarray): X*(T)\n",
     "            using_true_score (bool): If True, use the predefined score h function.\n",
     "\n",
     "        Returns:\n",
-    "            jax.Array: (B, N+1, d) forward bridge trajectories\n",
+    "            jnp.ndarray: (B, N+1, d) forward bridge trajectories\n",
     "        \"\"\"        \n",
     "        assert initial_condition.shape[-1] == terminal_condition.shape[-1] == self.d\n",
     "        if using_true_score:\n",
@@ -235,14 +235,14 @@
     "        return trajectories\n",
     "    \n",
     "    def get_transition_gradient(self,\n",
-    "                                foward_trajectories: jax.Array) -> jax.Array:\n",
+    "                                foward_trajectories: jnp.ndarray) -> jnp.ndarray:\n",
     "        \"\"\" Compute g(t_{m-1}, X_{m-1}, t_m, X_m) for eq. (8)\n",
     "\n",
     "        Args:\n",
-    "            foward_trajectories (jax.Array): (B, N+1, d) forward non-bridge trajectories\n",
+    "            foward_trajectories (jnp.ndarray): (B, N+1, d) forward non-bridge trajectories\n",
     "\n",
     "        Returns:\n",
-    "            jax.Array: (B, N, d) g(t_{m-1}, X_{m-1}, t_m, X_m)\n",
+    "            jnp.ndarray: (B, N, d) g(t_{m-1}, X_{m-1}, t_m, X_m)\n",
     "        \"\"\"        \n",
     "        assert foward_trajectories.shape[-1] == self.d\n",
     "        B = foward_trajectories.shape[0]      # batch size\n",
@@ -259,14 +259,14 @@
     "        return gradients\n",
     "    \n",
     "    def get_marginal_gradient(self,\n",
-    "                              backward_trajectories: jax.Array) -> jax.Array:\n",
+    "                              backward_trajectories: jnp.ndarray) -> jnp.ndarray:\n",
     "        \"\"\" Compute g^(t_{m-1}, Z*_{m-1}, t_m, Z*_m) for eq. (18)\n",
     "\n",
     "        Args:\n",
-    "            backward_trajectories (jax.Array): (B, N+1, d) backward bridge trajectories\n",
+    "            backward_trajectories (jnp.ndarray): (B, N+1, d) backward bridge trajectories\n",
     "\n",
     "        Returns:\n",
-    "            jax.Array: (B, N, d) g^(t_{m-1}, Z*_{m-1}, t_m, Z*_m)\n",
+    "            jnp.ndarray: (B, N, d) g^(t_{m-1}, Z*_{m-1}, t_m, Z*_m)\n",
     "        \"\"\"        \n",
     "        assert backward_trajectories.shape[-1] == self.d\n",
     "        B = backward_trajectories.shape[0]      # batch size\n",
@@ -286,8 +286,8 @@
     "    def get_trajectories_generator(self,\n",
     "                                   batch_size: int,\n",
     "                                   process_type: str,\n",
-    "                                   initial_condition: jax.Array,\n",
-    "                                   terminal_condition: jax.Array,\n",
+    "                                   initial_condition: jnp.ndarray,\n",
+    "                                   terminal_condition: jnp.ndarray,\n",
     "                                   score_transition_net: nn.Module=None,\n",
     "                                   score_transition_params: dict=None,\n",
     "                                   score_marginal_net: nn.Module=None,\n",
@@ -334,7 +334,7 @@
     "        \n",
     "    def learn_forward_transition_score(self,\n",
     "                                       score_transition_net: nn.Module,\n",
-    "                                       initial_condition: jax.Array,\n",
+    "                                       initial_condition: jnp.ndarray,\n",
     "                                       training_params: dict):\n",
     "        data_generator = self.get_trajectories_generator(batch_size=training_params[\"batch_size\"],\n",
     "                                                         process_type='forward',\n",
@@ -349,7 +349,7 @@
     "        dataset = iter(tfds.as_numpy(dataset))\n",
     "\n",
     "        @jax.jit\n",
-    "        def train_step(state: TrainState, batch_trajectories: jax.Array):\n",
+    "        def train_step(state: TrainState, batch_trajectories: jnp.ndarray):\n",
     "            batch_ts = flatten_batch(unsqueeze(jnp.tile(self.ts[1:], reps=(training_params[\"batch_size\"], 1)), axis=-1))        # (B*N, 1)\n",
     "            score_transition_gradients = self.get_transition_gradient(batch_trajectories)                                       # (B, N, d)\n",
     "            score_transition_gradients = flatten_batch(score_transition_gradients)                                              # (B*N, d)\n",
@@ -381,8 +381,8 @@
     "\n",
     "    def learn_marginal_score(self,\n",
     "                             score_marginal_net: nn.Module,\n",
-    "                             initial_condition: jax.Array,\n",
-    "                             terminal_condition: jax.Array,\n",
+    "                             initial_condition: jnp.ndarray,\n",
+    "                             terminal_condition: jnp.ndarray,\n",
     "                             score_transition_net: nn.Module,\n",
     "                             score_transition_params: dict,\n",
     "                             training_params: dict):\n",
@@ -400,7 +400,7 @@
     "        dataset = iter(tfds.as_numpy(dataset))\n",
     "\n",
     "        @jax.jit\n",
-    "        def train_step(state: TrainState, batch_trajectories: jax.Array):\n",
+    "        def train_step(state: TrainState, batch_trajectories: jnp.ndarray):\n",
     "            batch_ts = flatten_batch(unsqueeze(jnp.tile(self.ts[:-1], reps=(training_params[\"batch_size\"], 1)), axis=-1))        # (B*N, 1)\n",
     "            score_marginal_gradients = self.get_marginal_gradient(batch_trajectories)                                             # (B, N, d)\n",
     "            score_marginal_gradients = flatten_batch(score_marginal_gradients)                                                    # (B*N, d)\n",
@@ -439,8 +439,8 @@
    "source": [
     "def plot_est_vector_field(X_est_net: nn.Module,\n",
     "                          X_est_params: dict,\n",
-    "                          xs: jax.Array,\n",
-    "                          ts: jax.Array,\n",
+    "                          xs: jnp.ndarray,\n",
+    "                          ts: jnp.ndarray,\n",
     "                          *args,\n",
     "                          **kwargs):\n",
     "    xm, ym = jnp.meshgrid(xs, xs)\n",
@@ -457,8 +457,8 @@
     "    plt.show()\n",
     "\n",
     "def plot_vector_field(X: callable, \n",
-    "                      xs: jax.Array,\n",
-    "                      ts: jax.Array,\n",
+    "                      xs: jnp.ndarray,\n",
+    "                      ts: jnp.ndarray,\n",
     "                      *args,\n",
     "                      **kwargs):\n",
     "    xm, ym = jnp.meshgrid(xs, xs)\n",
@@ -500,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_timestep_embedding(timesteps: jax.Array, embedding_dim: int, max_period: int=10000, scaling_factor: float=100.0) -> jax.Array:\n",
+    "def get_timestep_embedding(timesteps: jnp.ndarray, embedding_dim: int, max_period: int=10000, scaling_factor: float=100.0) -> jnp.ndarray:\n",
     "    assert len(timesteps.shape) == 2 and timesteps.shape[-1] == 1\n",
     "    half_dim = embedding_dim // 2\n",
     "    emb = jnp.log(max_period) / (half_dim - 1)\n",
@@ -517,7 +517,7 @@
     "    apply_act_at_output: bool\n",
     "\n",
     "    @nn.compact\n",
-    "    def __call__(self, x: jax.Array) -> jax.Array:\n",
+    "    def __call__(self, x: jnp.ndarray) -> jnp.ndarray:\n",
     "        for dim in self.layer_dims:\n",
     "            x = self.act(nn.Dense(dim)(x))\n",
     "        if self.apply_act_at_output:\n",
@@ -535,7 +535,7 @@
     "    decoder_layer_dims: list\n",
     "\n",
     "    @nn.compact\n",
-    "    def __call__(self, x: jax.Array, t: jax.Array) -> jax.Array:\n",
+    "    def __call__(self, x: jnp.ndarray, t: jnp.ndarray) -> jnp.ndarray:\n",
     "        assert len(x.shape) == len(t.shape) == 2\n",
     "        t = get_timestep_embedding(t, self.time_embedding_dim)\n",
     "        t = MLP(out_dim=self.embedding_dim,\n",
