Q process in function spaces

--- a/sdebridge/notebooks/brownian_bridge_fft.ipynb
+++ b/sdebridge/notebooks/brownian_bridge_fft.ipynb
@@ -20,10 +20,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-23 17:24:07.961795: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-01-23 17:24:07.961827: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-01-23 17:24:07.962911: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-01-23 17:24:09.351943: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2024-01-25 15:12:18.814954: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-01-25 15:12:18.814986: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-01-25 15:12:18.815985: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-01-25 15:12:20.155114: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "/home/gefan/miniconda3/envs/sdebridge/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,10 +77,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f28e03519d0>"
+       "<matplotlib.legend.Legend at 0x7fa86036dd10>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -98,6 +98,8 @@
    "source": [
     "init_s = jnp.array(butterfly1_pts())[:, ::1861][:, ::1]\n",
     "term_s = jnp.array(butterfly2_pts())[:, ::475][:, ::1]\n",
+    "# init_s = jnp.array(butterfly1_pts())\n",
+    "# term_s = jnp.array(butterfly2_pts())\n",
     "print(init_s.shape)\n",
     "print(term_s.shape)\n",
     "plt.scatter(init_s[0], init_s[1], s=10, label='initial')\n",
