Changed code for fourier basis kunita sde and added notebooks for fourier

--- a/notebooks/fourier_decomp.ipynb
+++ b/notebooks/fourier_decomp.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-11T17:05:47.694248Z",
+     "start_time": "2024-05-11T17:05:47.340682Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -14,7 +19,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-11T17:05:50.401865Z",
+     "start_time": "2024-05-11T17:05:47.695454Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -30,10 +40,7 @@
     "import matplotlib.pyplot as plt\n",
     "from functools import partial\n",
     "\n",
-    "import sys\n",
-    "sys.path.append('../')\n",
-    "\n",
-    "from data_processing import butterfly1_pts, butterfly2_pts\n",
+    "from sdebridge.data_processing import butterfly1_pts, butterfly2_pts\n",
     "\n",
     "butterfly1 = jnp.array(butterfly1_pts())\n",
     "butterfly2 = jnp.array(butterfly2_pts())\n",
@@ -43,7 +50,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-11T17:05:50.412194Z",
+     "start_time": "2024-05-11T17:05:50.400612Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def fourier_decompose(xs, num_truncation=None):\n",
@@ -139,7 +151,7 @@
     "s2 = butterfly2[:, ::500]\n",
     "print(s2.shape)\n",
     "\n",
-    "num_truncation = 8\n",
+    "num_truncation =8\n",
     "s2_coeffs = fourier_decompose(s2, num_truncation)\n",
     "s2_recon = fourier_compose(s2_coeffs, s2.shape[1])\n",
     "print(s2_recon.shape)\n",
