Put solvers into sde file. Removed methods from sde class for easier jax stuff

--- a/experiments/Q_bridge_landmarks.ipynb
+++ b/experiments/Q_bridge_landmarks.ipynb
@@ -40,8 +40,8 @@
    "execution_count": 17,
    "outputs": [],
    "source": [
-    "from sdebridge.diffusion_bridge import DiffusionBridge\n",
-    "from sdebridge.sde import gaussian_independent_kernel_sde, reverse, bridge\n",
+    "from sdebridge import diffusion_bridge as db\n",
+    "from sdebridge import sdes\n",
     "from sdebridge.utils import score_fn\n",
     "from sdebridge.data_processing import sample_ellipse\n",
     "\n",
@@ -72,8 +72,7 @@
     "grid_range = (-1, 2.)\n",
     "\n",
     "forward_init = sample_ellipse(num_pts)\n",
-    "kunita_sde = gaussian_independent_kernel_sde(T, N, dim, num_pts, alpha, sigma, grid_range, grid_size)\n",
-    "kunita_diffusion = DiffusionBridge(kunita_sde)"
+    "kunita_sde = sdes.gaussian_independent_kernel_sde(T, N, dim, num_pts, alpha, sigma, grid_range, grid_size)"
    ],
    "metadata": {
     "collapsed": false,
@@ -156,32 +155,30 @@
    ],
    "source": [
     "from sdebridge.networks.score_unet import ScoreUNet\n",
-    "setup_params = {\n",
-    "    \"neural_net\": ScoreUNet,\n",
-    " \n",
-    "    \"network\": {\n",
-    "        \"output_dim\": kunita_diffusion.sde.dim*kunita_diffusion.sde.n_bases,\n",
-    "        \"time_embedding_dim\": 32,\n",
-    "        \"init_embedding_dim\": 32,\n",
-    "        \"act_fn\": \"silu\",\n",
-    "        \"encoder_layer_dims\": [64, 32, 16, 8],\n",
-    "        \"decoder_layer_dims\": [8, 16, 32, 64],\n",
-    "        \"batchnorm\": True,\n",
-    "    },\n",
+    "\n",
+    "neural_net = ScoreUNet\n",
+    "\n",
+    "network = {\n",
+    "    \"output_dim\": kunita_sde.dim*kunita_sde.n_bases,\n",
+    "    \"time_embedding_dim\": 32,\n",
+    "    \"init_embedding_dim\": 32,\n",
+    "    \"act_fn\": \"silu\",\n",
+    "    \"encoder_layer_dims\": [64, 32, 16, 8],\n",
+    "    \"decoder_layer_dims\": [8, 16, 32, 64],\n",
+    "    \"batchnorm\": True,\n",
+    "}\n",
     "    \n",
-    "    \"training\": {\n",
-    "        \"batch_size\": 100,\n",
-    "        \"load_size\": 5000,\n",
-    "        \"num_epochs\": 50,\n",
-    "        \"num_batches_per_epoch\": 10,\n",
-    "        \"learning_rate\": 5e-3,\n",
-    "        \"warmup_steps\": 0,\n",
-    "    }\n",
+    "training= {\n",
+    "    \"batch_size\": 100,\n",
+    "    \"load_size\": 1000,\n",
+    "    \"num_epochs\": 50,\n",
+    "    \"learning_rate\": 5e-3,\n",
+    "    \"warmup_steps\": 0,\n",
     "}\n",
     "\n",
     "target = sample_ellipse(num_pts)\n",
     "train_key = jax.random.split(key, 2)[0]\n",
-    "score_state_p = kunita_diffusion.learn_p_score(target, train_key, setup_params)"
+    "score_state_p = db.learn_p_score(kunita_sde, target, train_key, **training, net=neural_net, network_params=network)"
    ],
    "metadata": {
     "collapsed": false,
@@ -199,8 +196,8 @@
    "source": [
     "initial_val = sample_ellipse(num_pts, scale=1.2)\n",
     "score_p = score_fn(score_state_p)\n",
-    "reverse_sde = reverse(kunita_sde, score_p)\n",
-    "backward_trajs = reverse_sde.simulate_trajectories(initial_val, 2, train_key)\n"
+    "reverse_sde = sdes.reverse(kunita_sde, score_p)\n",
+    "backward_trajs = sdes.simulate_traj(reverse_sde, initial_val, 2, train_key)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -210,22 +207,6 @@
     }
    },
    "id": "da62ba04a8952a47"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [],
-   "source": [
-    "plt_init = target.reshape((-1, 2))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-11T14:02:09.278793Z",
-     "start_time": "2024-05-11T14:02:09.251523Z"
-    }
-   },
-   "id": "a1acede0c3b1324e"
   },
   {
    "cell_type": "code",
@@ -249,6 +230,8 @@
     }
    ],
    "source": [
+    "plt_init = target.reshape((-1, 2))\n",
+    "\n",
     "traj = backward_trajs[0].reshape(-1, num_pts*dim)\n",
     "plot_single_trajectory(traj, \"Conditioned Kunita Flow\")\n",
     "plt_target = target.reshape((num_pts, 2))\n",
