Removed some older notebooks and organised into paper plots vs example notebooks

--- a/paper_plots/species_mean_bridge.ipynb
+++ b/paper_plots/species_mean_bridge.ipynb
@@ -21,10 +21,10 @@
     "from ml_collections import ConfigDict\n",
     "import orbax.checkpoint\n",
     "\n",
-    "from sdebridge.sde import FourierGaussianKernelSDE\n",
-    "from sdebridge.diffusion_bridge import DiffusionBridge\n",
+    "from sdebridge.sdes import fourier_gaussian_kernel_sde\n",
+    "from sdebridge import diffusion_bridge \n",
     "from sdebridge import plotting\n",
-    "from sdebridge.networks import ScoreUNet\n",
+    "from sdebridge.networks.score_unet import ScoreUNet\n",
     "from sdebridge.utils import create_train_state"
    ]
   },
@@ -165,7 +165,7 @@
     "def simulate_bridge(initial_shape, traget_shape=papilonidae_mean, n_bases=n_bases, score_p=None):\n",
     "    sde_config = sde_config_template\n",
     "    sde_config.init_S = initial_shape\n",
-    "    sde = FourierGaussianKernelSDE(sde_config)\n",
+    "    sde = fourier_gaussian_kernel_sde(**sde_config)\n",
     "    bridge = DiffusionBridge(sde)\n",
     "    X0_flatten, XT_flatten = compute_X_coeffs(initial_shape, traget_shape, n_bases)\n",
     "    Xs_flatten = bridge.simulate_backward_bridge(X0_flatten, XT_flatten, score_p=score_p, num_batches=4)[\"trajectories\"]\n",
