changed N to n_bases and Nb to bm_size for clarity

--- a/notebooks/brownian_bridge_fourier.ipynb
+++ b/notebooks/brownian_bridge_fourier.ipynb
@@ -293,7 +293,7 @@
     "neural_net = ScoreUNet\n",
     "\n",
     "network = {\n",
-    "    \"output_dim\": bm_sde.dim*bm_sde.N*2,\n",
+    "    \"output_dim\": bm_sde.dim*bm_sde.n_bases*2,\n",
     "    \"time_embedding_dim\": 32,\n",
     "    \"init_embedding_dim\": 32,\n",
     "    \"act_fn\": \"silu\",\n",
