--- a/notebooks/kunita_bridge_landmarks.ipynb
+++ b/notebooks/kunita_bridge_landmarks.ipynb
@@ -167,7 +167,7 @@
     "neural_net = ScoreUNet\n",
     "\n",
     "network = {\n",
-    "    \"output_dim\": kunita_sde.dim*kunita_sde.N,\n",
+    "    \"output_dim\": kunita_sde.dim*kunita_sde.n_bases,\n",
     "    \"time_embedding_dim\": 32,\n",
     "    \"init_embedding_dim\": 32,\n",
     "    \"act_fn\": \"silu\",\n",
