--- a/notebooks/fourier_decomp.ipynb
+++ b/notebooks/fourier_decomp.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-19T07:58:27.534708Z",
-     "start_time": "2024-05-19T07:58:27.148276Z"
+     "end_time": "2024-05-19T09:49:59.270017Z",
+     "start_time": "2024-05-19T09:49:58.728094Z"
     }
    },
    "outputs": [],
@@ -21,8 +21,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-19T07:58:30.352625Z",
-     "start_time": "2024-05-19T07:58:27.535403Z"
+     "end_time": "2024-05-19T09:50:01.891699Z",
+     "start_time": "2024-05-19T09:49:59.123352Z"
     }
    },
    "outputs": [
@@ -52,8 +52,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-19T07:58:30.363652Z",
-     "start_time": "2024-05-19T07:58:30.352550Z"
+     "end_time": "2024-05-19T09:50:01.902457Z",
+     "start_time": "2024-05-19T09:50:01.891264Z"
     }
    },
    "outputs": [],
@@ -75,8 +75,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-19T07:58:34.270618Z",
-     "start_time": "2024-05-19T07:58:33.395387Z"
+     "end_time": "2024-05-19T09:50:02.647480Z",
+     "start_time": "2024-05-19T09:50:01.904203Z"
     }
    },
    "outputs": [
@@ -131,8 +131,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-19T07:59:02.334551Z",
-     "start_time": "2024-05-19T07:59:01.894285Z"
+     "end_time": "2024-05-19T09:50:03.063548Z",
+     "start_time": "2024-05-19T09:50:02.647938Z"
     }
    },
    "outputs": [
@@ -182,11 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-19T09:50:03.063659Z",
+     "start_time": "2024-05-19T09:50:03.061510Z"
+    }
    }
   }
  ],
