Added run scripts

--- a/paper_plots/species_mean_bridge.ipynb
+++ b/paper_plots/species_mean_bridge.ipynb
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "score_p_state = load_ckpts('/home/gefan/Projects/sdebridge/sdebridge/ckpts/score_p_16_bases_mean')"
+    "score_p_state = load_ckpts('./ckpts/score_p_16_bases_mean')"
    ]
   },
   {
